kubernetes/main/content-core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-core-service
  labels:
    app: content-core
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: content-core
